fix #2386